--- a/front/assets/css/main.css
+++ b/front/assets/css/main.css
@@ -6,3 +6,13 @@ html, body {
     margin: 0;
   }
   
+:root {
+  --ui-primary: #0072bb;
+  --ui-secondary: #003153;
+  --ui-tertiary: #bebfc5;
+  --ui-accent: #F64A8A;
+}
+
+@theme{
+  --font-basheq: 'Basheq'
+}
